config/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portal-web
  namespace: $(k8s-namespace)
  labels:
    name: portal-web
spec:
  ports:
  - port: 80
    name: web
  selector:
    name: portal-web
