config/k8s/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portal-ingress-https
  namespace: $(k8s-namespace)
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`$(route-host)`) && PathPrefix(`/portal`)
    kind: Rule
    priority: 20
    services:
      - name: portal-web
        port: 80
  tls:
    certResolver: default
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portal-ingress-http
  namespace: $(k8s-namespace)
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`$(route-host)`) && PathPrefix(`/portal`)
    kind: Rule
    priority: 20
    middlewares:
      - name: https-only
    services:
      - name: portal-web
        port: 80
