config/k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: portal-ingress
  namespace: $(k8s-namespace)
  labels:
    name: portal-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-azds
spec:
  rules:
    - host: $(route-host)
      http:
        paths:
          - path: /portal
            backend:
              serviceName: portal-web
              servicePort: web
